Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ curl -o /home/example/someproject/sonar-project.properties \
 <h4>
 <a id="using-sonarlint-cli-to-perform-a-quick-code-analysis-of-all-php-files-in-a-directory" class="anchor" href="#using-sonarlint-cli-to-perform-a-quick-code-analysis-of-all-php-files-in-a-directory" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Using <a href="http://www.sonarlint.org/commandline/index.html">SonarLint CLI</a> to perform a quick code analysis of all php files in a directory</h4>
 
-<div class="highlight highlight-source-shell"><pre>./athena sonarqube scanner /home/example/someproject/ --src public/<span class="pl-k">*</span>.php</pre></div>
+<div class="highlight highlight-source-shell"><pre>./athena sonarqube sonarlint <span class="pl-k">~</span>/someproject/ --src public/<span class="pl-k">*</span>.php</pre></div>
 
 <h4>
 <a id="installing-and-removing-sonarqube-plugins" class="anchor" href="#installing-and-removing-sonarqube-plugins" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installing and removing <a href="http://docs.sonarqube.org/display/PLUG/Plugin+Library">SonarQube Plugins</a>
