Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ reports might take a little bit of time to display on the web interface dependin
 
 <div class="highlight highlight-source-shell"><pre>athena sonarqube sonarlint <span class="pl-k">~</span>/myproject/</pre></div>
 
-<p>Unlike running code analysis with the SonarQube scanner when using SonarLint you don't need to start the SonarQube Server. After the SonarLint code analysis by default an html report file with be generated inside your project's root directory.</p>
+<p>Unlike running code analysis with the SonarQube scanner when using SonarLint you don't need to start the SonarQube Server. After the SonarLint code analysis by default a report directory (<em>sonarlint-report/</em>) with be created inside your project's root directory containing the html report file.</p>
 
 <h2>
 <a id="examples" class="anchor" href="#examples" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Examples</h2>
