Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@ pre-installed to get you started quickly.</p>
 </li>
 <li><a href="#plugins">Plugins</a></li>
 <li>
-<a href="#plugins">CLI Options Reference</a>
+<a href="#cli-options-reference">CLI Options Reference</a>
 
 <ul>
 <li><a href="#sonarqube-scanner-options">SonarQube Scanner options</a></li>
 <li><a href="#sonarlint-cli-options">SonarLint CLI options</a></li>
 </ul>
 </li>
-<li><a href="#cli-options-reference">Resources</a></li>
+<li><a href="#resources">Resources</a></li>
 </ul>
 
 <h2>
