Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ Options:
  -X,--debug            Produce execution debug output
  -i,--interactive      Run interactively</pre></div>
 
-<p>Some of the properties that can be defined (<strong>-D</strong>) for SonarQube Scanner </p>
+<p>Some of the analysis properties/parameters that can be defined (<strong>-D</strong>) for SonarQube Scanner </p>
 
 <div class="highlight highlight-text-html-php"><pre><span class="pl-s1"><span class="pl-c1">sonar</span><span class="pl-k">.</span><span class="pl-c1">host</span><span class="pl-k">.</span><span class="pl-c1">url</span><span class="pl-k">=</span><span class="pl-c1">http</span>:<span class="pl-c">//thesonarserver:9000</span></span>
 <span class="pl-s1"><span class="pl-c1">sonar</span><span class="pl-k">.</span><span class="pl-c1">projectKey</span><span class="pl-k">=</span><span class="pl-c1">athena</span><span class="pl-k">-</span><span class="pl-c1">sonarqube</span><span class="pl-k">-</span><span class="pl-c1">plugin</span></span>
@@ -226,8 +226,9 @@ Options:
 <span class="pl-s1"><span class="pl-c1">sonar</span><span class="pl-k">.</span><span class="pl-c1">projectBaseDir</span><span class="pl-k">=</span><span class="pl-k">/</span><span class="pl-c1">home</span><span class="pl-k">/</span><span class="pl-c1">example</span><span class="pl-k">/</span><span class="pl-c1">projects</span><span class="pl-k">/</span><span class="pl-c1">plugin</span><span class="pl-k">-</span><span class="pl-c1">sonarqube</span></span>
 <span class="pl-s1"><span class="pl-c1">sonar</span><span class="pl-k">.</span><span class="pl-c1">sources</span><span class="pl-k">=</span><span class="pl-c1">bin</span><span class="pl-k">/</span>, <span class="pl-c1">docker</span><span class="pl-k">/</span>, <span class="pl-c1">example</span><span class="pl-k">/</span><span class="pl-c1">file</span><span class="pl-k">.</span><span class="pl-c1">php</span></span>
 <span class="pl-s1"><span class="pl-c1">sonar</span><span class="pl-k">.</span><span class="pl-c1">sourceEncoding</span><span class="pl-k">=</span><span class="pl-c1">UTF</span><span class="pl-k">-</span><span class="pl-c1">8</span></span>
-<span class="pl-s1"><span class="pl-c1">sonar</span><span class="pl-k">.</span><span class="pl-c1">language</span><span class="pl-k">=</span><span class="pl-c1">php</span></span>
-<span class="pl-s1">(<span class="pl-k">...</span>)</span></pre></div>
+<span class="pl-s1"><span class="pl-c1">sonar</span><span class="pl-k">.</span><span class="pl-c1">language</span><span class="pl-k">=</span><span class="pl-c1">php</span></span></pre></div>
+
+<p><a href="http://docs.sonarqube.org/display/SONAR/Analysis+Parameters">More info</a></p>
 
 <h4>
 <a id="sonarlint-cli-options" class="anchor" href="#sonarlint-cli-options" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SonarLint CLI options</h4>
